--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@portabletext/types": "^2.0.8",
     "@sanity/client": "^6.1.5",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/ui": "^1.9.0",
     "@stripe/stripe-js": "^2.1.10",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
@@ -27,6 +28,8 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "sanity": "^3.19.1",
+    "sanity-plugin-hotspot-array": "^1.0.1",
     "stripe": "^14.2.0",
     "styled-components": "^6.1.0",
     "tailwindcss": "3.3.2",
